# sine-rl

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
scripts/: eval.py  test.py  train.py
src/sine_rl/: __init__.py  __main__.py  cli.py
src/sine_rl/analysis/: plotting.py
src/sine_rl/envs/: __init__.py  sine_env.py
src/sine_rl/testing/: test.py
src/sine_rl/training/: __init__.py  callbacks.py  evaluate.py  train.py
src/sine_rl/utils/: __init__.py  plotting.py
